ajout des adresses de bases de données comme variables  d'environnement

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "comment-json": "^4.2.2",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "https": "^1.0.0",
     "mongodb": "^4.6.0"
