--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.27.2",
     "comment-json": "^4.2.2",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
