--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.27.2",
+    "body-parser": "^1.20.0",
     "comment-json": "^4.2.2",
     "dotenv": "^16.0.1",
     "mongodb": "^4.6.0"
